<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Open calendar</string>
    <string name="app_name"> POG Calc </string>
    <string name="action_info">Info</string>
    <string name="action_settings">Info</string>

    <color name="text_color">#31D1F1</color>
    <color name="white">#ffffff</color>

    <string name="open">Open</string>

    <color name="fontcolor">#000000</color>

    <string name="SelectLMP">Select the Last Menstrual Period (LMP) date:</string>
    <string name="SelectEDD">Select the Estimated Delivery Date (EDD) date:</string>
    <string name="SelectDate">Selected LMP Date:</string>
    <string name="SelectEDDDate">Selected EDD Date:</string>
    <string name="POG">Period of Gestation(POG)</string>
    <string name="Conception">Conception</string>
    <string name="EDD">EDD</string>
    <string name="Empty">""</string>
    <string name="LT">&lt;&lt;</string>
    <string name="GT">&gt;&gt;</string>
    <string name="InfoLMP">*LMP - Last Menstrual Period</string>
    <string name="InfoPOG">*POG - Period of gestation</string>
    <string name="InfoEDD">*EDD - Expected Delivery date</string>
    <string name="InfoConc">*Conception - Date of Conception</string>
    <string name="InfoUSG">*USG - Ultra Sonogram</string>
    <string name="InfoDF">*Date Format - dd-mm-yyyy</string>
    <string name="InfoCurr">*Date Marked in Blue is the current Date</string>
    <string name="InfoApp">*POG Calc app calculates - the Current gestational age from the date of LMP and EDD, EDD based on POG and POG based on previous USG</string>
    <string name="InfoDevs">*Contact Developers - Dr.Arun Babu T/Rajkumar appovator2014@gmail.com</string>
    <string name="title_activity_reverse_pogcalc">ReversePOGCalc</string>
    <string name="hello_world">Hello world!</string>
    <string name="revpogEdd">EDD based POG</string>
    <string name="revpogUsg">Prev USG based POG</string>

    <string name="SelectUSG">Select the Ultra Sound(USG) date:</string>
    <string name="SelectUSGDate">Selected USG Date:</string>
    <string name="POGonUSG">Enter POG on Ultra Sound Date:</string>

    <string-array name="weeks">
        <item>0 Week</item>
        <item>1 Week</item>
        <item>2 Weeks</item>
        <item>3 Weeks</item>
        <item>4 Weeks</item>
        <item>5 Weeks</item>
        <item>6 Weeks</item>
        <item>7 Weeks</item>
        <item>8 Weeks</item>
        <item>9 Weeks</item>
        <item>10 Weeks</item>
        <item>11 Weeks</item>
        <item>12 Weeks</item>
        <item>13 Weeks</item>
        <item>14 Weeks</item>
        <item>15 Week</item>
        <item>16 Weeks</item>
        <item>17 Weeks</item>
        <item>18 Weeks</item>
        <item>19 Weeks</item>
        <item>20 Weeks</item>
        <item>21 Weeks</item>
        <item>22 Weeks</item>
        <item>23 Weeks</item>
        <item>24 Weeks</item>
        <item>25 Weeks</item>
        <item>26 Weeks</item>
        <item>27 Weeks</item>
        <item>28 Weeks</item>
        <item>29 Weeks</item>
        <item>30 Weeks</item>
        <item>31 Weeks</item>
        <item>32 Weeks</item>
        <item>33 Weeks</item>
        <item>34 Weeks</item>
        <item>35 Weeks</item>
        <item>36 Weeks</item>
        <item>37 Weeks</item>
        <item>38 Weeks</item>
        <item>39 Weeks</item>
        <item>40 Weeks</item>
    </string-array>
    <string-array name="days">
        <item>0 Day</item>
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
        <item>4 Days</item>
        <item>5 Days</item>
        <item>6 Days</item>
    </string-array>


</resources>
