<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
    
    <TextView android:id="@+id/tvEnter" style="@style/Text.Heading" android:text="@string/SelectLMP" android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    
<RelativeLayout 
	android:id="@+id/header"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/header_background"
    >



<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="left"
    >
<TextView  
	android:id="@+id/previous" 
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    android:text="@string/LT" 
    android:clickable="true"   
    />
</LinearLayout>

<TextView  
	android:id="@+id/title" 
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:layout_centerHorizontal="true"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:textSize="14sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    
    
    />
<LinearLayout 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="right"
    android:layout_toRightOf="@+id/title"
    >
<TextView  
	android:id="@+id/next" 
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:padding="5dp"
    android:paddingLeft="5dp"
    android:textSize="20sp"
    android:textStyle="bold"
    android:textColor="@color/white"
    android:gravity="center_horizontal"
    android:text="@string/GT"
    android:clickable="true"
    />
</LinearLayout>

</RelativeLayout>



<RelativeLayout 
	android:id="@+id/header"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    >
 


<GridView
    android:id="@+id/gridview"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:horizontalSpacing="2dp"
    android:numColumns="7"
    android:stretchMode="columnWidth"
    android:verticalSpacing="2dp" >
</GridView>

<View
    android:layout_width="fill_parent"
    android:layout_below="@+id/gridview"
     android:id="@+id/tvLine"
    android:layout_height="1dp"
    android:background="@drawable/header_background"/>
 

<TextView      android:id="@+id/tvSelect" style="@style/Text.Light" android:visibility="invisible" android:layout_marginTop="6dp" android:layout_centerHorizontal="true"  android:layout_below="@+id/tvLine" android:text="@string/SelectDate" android:layout_width="wrap_content"
     android:layout_height="wrap_content" />



 <LinearLayout android:layout_width="fill_parent"
        android:orientation="vertical" 
            android:id="@+id/loPOG"
            android:layout_below="@+id/tvSelect"
            android:paddingTop="10sp"
           android:gravity="center"
            android:layout_height="fill_parent">
        	<TextView android:id="@+id/tvTopPOG"         style="@style/Text.POGStrong"  android:visibility="invisible" android:text="@string/POG" android:layout_width="wrap_content"
            	android:layout_height="wrap_content" />
        	<TextView android:id="@+id/tvPOG"         style="@style/Text.Strong"  android:visibility="invisible" android:text="@string/Empty" android:layout_width="wrap_content"
            	android:layout_height="wrap_content" />
        	

        
 <LinearLayout android:layout_width="fill_parent"
 	     android:baselineAligned="false"
    	android:layout_height="0dip" android:layout_weight="1"
    	android:weightSum="2"
		 android:orientation="horizontal">
		<LinearLayout android:layout_width="fill_parent"
        	android:layout_weight="1" android:orientation="vertical" 
        	android:gravity="center" android:layout_height="fill_parent">
        	<TextView  android:id="@+id/tvTopConc" style="@style/Text.Light" android:visibility="invisible" android:text="@string/Conception" android:layout_width="wrap_content"
            	android:layout_height="wrap_content" />
        	<TextView      android:id="@+id/tvConc" style="@style/Text.Light" android:visibility="invisible" android:text="@string/Empty" android:layout_width="wrap_content"
            	android:layout_height="wrap_content" />
      	</LinearLayout>
      	

		
      	<LinearLayout android:layout_width="fill_parent"
        	android:layout_height="fill_parent" android:layout_weight="1" 
        	android:orientation="vertical" android:gravity="center">
        	<TextView android:id="@+id/tvTopEDD" style="@style/Text.Light" android:visibility="invisible" android:text="@string/EDD" android:layout_width="wrap_content"
            	android:layout_height="wrap_content" />
        	<TextView android:id="@+id/tvEDD" style="@style/Text.Light" android:visibility="invisible" android:text="@string/Empty" android:layout_width="wrap_content"
            	android:layout_height="wrap_content" />
      	</LinearLayout>
      	</LinearLayout>


	 <LinearLayout android:layout_width="fill_parent"
		 android:baselineAligned="false"
		 android:layout_height="0dip" android:layout_weight="1"
		 android:weightSum="2"
		 android:orientation="horizontal">
		 <LinearLayout android:layout_width="fill_parent"
			 android:layout_weight="1" android:orientation="vertical"
			 android:gravity="center" android:layout_height="fill_parent">
			 <Button
				 android:id="@+id/btnRPOG"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:background="@android:color/transparent"
				 android:text="@string/revpogEdd"
				 android:textColor="@color/buttonfontcolor"
				 style="@style/Text.Btn"

				 android:onClick="onRPOG"
				 />
		 </LinearLayout>



		 <LinearLayout android:layout_width="fill_parent"
			 android:layout_height="fill_parent" android:layout_weight="1"
			 android:orientation="vertical" android:gravity="center">
			 <Button
				 android:id="@+id/btnRPOGUSG"
				 android:layout_width="wrap_content"
				 android:layout_height="wrap_content"
				 android:background="@android:color/transparent"
				 android:text="@string/revpogUsg"
				 android:textColor="@color/buttonfontcolor"
				 style="@style/Text.Btn"

				 android:onClick="onRPOGUSG"
				 />
		 </LinearLayout>
	 </LinearLayout>





      	

</LinearLayout>
    


</RelativeLayout>

</LinearLayout>